# pga_scraper

./: .gitignore  README.md  analysis.ipynb  formatter.py  get_tournament_keys.py  main.py  pyproject.toml  scrape_data.py  tournament_keys.json  tree.txt  utils.py
src/pga_scraper/: __init__.py  scrape_data.py
src/pga_scraper/scrape/: gql_queries.yaml  id_data.py  player_data.py  tournament_data.py
src/pga_scraper/utils/: formatter.py  frame_formatters.py
utils/: formatter.py
