[project]
name = "pga-scraping"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastparquet>=2024.11.0",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "matplotlib>=3.9.2",
    "bs4>=0.0.2",
    "ipykernel>=6.29.5",
    "requests>=2.32.3",
]
