[project]
name = "pga-scraping"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastparquet>=2024.11.0",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "tqdm>=4.67.1",
    "bs4>=0.0.2",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "black>=25.1.0",
]
analysis = [
    "ipykernel>=6.29.5",
    "polars>=1.23.0",
    "polars-ols>=0.3.5",
    "matplotlib>=3.9.2",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
]
