[project]
name = "pga-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jack" }
]
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "tqdm>=4.67.1",
    "polars>=1.25.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "pyarrow>=19.0.1",
]
